Tue Oct 18 22:57:41 GMT 2011  Richard Boulton <richard@tartarus.org>

	* geospatial/: Update copyright statements.

Tue Oct 18 22:48:29 GMT 2011  Richard Boulton <richard@tartarus.org>

	* geospatial/: Change coordinate unserialisation functions to be
	  member functions which modify the coordinate, rather than being
	  static ones that return coordinates, to avoid lots of dynamic
	  allocations in the posting source.  Rename the virtual metric
	  operator() member to "pointwise_distance()", to avoid it hiding
	  the non-virtual overloaded forms of operator().  Add new
	  metric operator() overloads which take a serialised coordinate
	  list, and which calculate the distance directly without unpacking
	  all the coordinates first.  Wrap longitudes to 0..360 range
	  instead of -180..180 range to match geoencode routines.  Fix some
	  documentation comments in the public header.

Mon Jun 07 19:27:24 GMT 2010  Richard Boulton <richard@tartarus.org>

	* tests/api_geospatial.cc: Fix latlongcoords1 to work with the new
	  LatLongCoords semantics.

Mon Jun 07 19:21:57 GMT 2010  Richard Boulton <richard@tartarus.org>

	* geospatial/latlongcoord.cc,include/xapian/geospatial.h,
	  tests/api_geospatial.cc: Change LatLongCoords to retain the order
	  of coordinates, to allow future metrics to consider the
	  coordinates as the boundary of a shape, rather than just a
	  distinct set of points.  Use a vector instead of a set to hold
	  the coordinates.  Remove the "erase" method, since this is less
	  easy to define for a vector (and I was never particularly happy
	  about the floating point comparisons involved in checking for
	  equality when erasing a member from the set, anyway).  Rename the
	  "insert" method to "append", since the coordinates are now
	  ordered.

Mon Jun 07 14:58:34 GMT 2010  Richard Boulton <richard@tartarus.org>

	* include/xapian/geospatial.h: Add an implementation for the
	  constructor for an uninitialised LatLongCoordsIterator.  Make