@@ -1,3 +1,8 @@
+Wed Oct 19 00:24:54 GMT 2011  Richard Boulton <richard@tartarus.org>
+
+	* geospatial/latlongcoord.cc: Use new encoding method for
+	  cooordinates, from geoencode.h.
+
 Tue Oct 18 22:57:41 GMT 2011  Richard Boulton <richard@tartarus.org>
 
 	* geospatial/: Update copyright statements.
